# camoufox-cli

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
js/: package.json  pnpm-lock.yaml
js/src/: cli.ts
js/tests/: cli.test.ts
skills/camoufox-cli/: SKILL.md
skills/camoufox-cli/references/: commands.md  snapshot-refs.md
src/camoufox_cli/: __main__.py  browser.py  cli.py  commands.py  identity.py  models.py  operations.py  protocol.py  proxy.py  refs.py  server.py  types.py
tests/: test_browser.py  test_cli.py  test_commands.py  test_e2e.py  test_identity.py  test_protocol.py  test_proxy.py  test_refs.py  test_server.py  test_typing.py
