[project]
name = "camoufox-cli"
version = "0.4.0"
description = "Anti-detect browser CLI & Skills for AI agents, powered by Camoufox"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Scott Hyndman", email = "scotty.hyndman@gmail.com" },
    { name = "Benn Huang" },
]
readme = "README.md"
keywords = ["browser", "automation", "anti-detect", "camoufox", "ai-agent", "headless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "camoufox[geoip]",
    "playwright<1.60",
    "Pillow",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://github.com/shyndman/camoufox-cli"
Repository = "https://github.com/shyndman/camoufox-cli"
Issues = "https://github.com/shyndman/camoufox-cli/issues"

[project.scripts]
camoufox-cli = "camoufox_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/camoufox_cli"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that launch a real browser (slow, requires camoufox)",
]
asyncio_default_fixture_loop_scope = "function"

[tool.basedpyright]
include = ["src", "tests"]
exclude = [".venv"]
pythonVersion = "3.13"
typeCheckingMode = "recommended"
reportMissingTypeStubs = false
reportExplicitAny = "error"

# Tests deliberately exercise module-private internals (helpers, registry
# entries, daemon state, fake injection), so private-usage is expected there.
[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.7",
    "pytest>=9.0.2",
    "ruff>=0.15.17",
]
